--- a/mathematics_util/build.gradle
+++ b/mathematics_util/build.gradle
@@ -1,7 +1,22 @@
-plugins {
-    id 'com.android.library'
-    id 'kotlin-android'
+apply plugin: 'com.android.library'
+
+ext {
+    PUBLISH_GROUP_ID = 'io.github.uttam-kumar-tak'
+    PUBLISH_VERSION = '1.0.0'
+    PUBLISH_ARTIFACT_ID = 'mathematics_util'
+    PUBLISH_DESCRIPTION = 'simple math addition util'
+    PUBLISH_URL = 'https://github.com/uttam-kumar-tak/MyMathematics'
+    PUBLISH_LICENSE_NAME = 'Mathematics License'
+    PUBLISH_LICENSE_URL = 'https://github.com/uttam-kumar-tak/MyMathematics/blob/master/LICENSE'
+    PUBLISH_DEVELOPER_ID = 'uttam-kumar-tak'
+    PUBLISH_DEVELOPER_NAME = 'Uttam Kumar'
+    PUBLISH_DEVELOPER_EMAIL = 'uttamihill@gmail.com'
+    PUBLISH_SCM_CONNECTION = 'scm:git:github.com/uttam-kumar-tak/MyMathematics.git'
+    PUBLISH_SCM_DEVELOPER_CONNECTION = 'scm:git:ssh://github.com/uttam-kumar-tak/MyMathematics.git'
+    PUBLISH_SCM_URL = 'https://github.com/uttam-kumar-tak/MyMathematics'
 }
+
+apply from: "${rootProject.projectDir}/scripts/publish-module.gradle"
 
 android {
     compileSdk 32
@@ -21,14 +36,18 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            testCoverageEnabled true
+            consumerProguardFiles 'consumer-proguard-rules.pro'
+        }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
+//    compileOptions {
+//        sourceCompatibility JavaVersion.VERSION_1_8
+//        targetCompatibility JavaVersion.VERSION_1_8
+//    }
+//    kotlinOptions {
+//        jvmTarget = '1.8'
+//    }
 }
 
 dependencies {
